@@ -11,6 +11,7 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Base64;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -39,31 +40,45 @@ public class OpenAiAnalysisService {
   @Value("${luna-skin.ai.openai.model}")
   private String model;
 
-  public OpenAiSkinAnalysisResult analyzeSkin(String imageUrl, String phaseType, String baseDir) {
+  public OpenAiSkinAnalysisResult analyzeSkin(String imageUrl, String leftImageUrl, String rightImageUrl, String phaseType) {
     String prompt = buildPrompt(phaseType);
 
-    // URL → 실제 파일 경로 변환 후 base64 인코딩
-    EncodedImage image = convertToBase64(imageUrl, baseDir);
-    String dataUrl = "data:" + image.mimeType() + ";base64," + image.base64Data();
+    // 정면 사진 (필수)
+    EncodedImage frontImage = convertToBase64(imageUrl);
+
+    // content 리스트 구성
+    List<Map<String, Object>> content = new ArrayList<>();
+    content.add(Map.of("type", "text", "text", prompt));
+    content.add(Map.of("type", "image_url", "image_url",
+        Map.of("url", "data:" + frontImage.mimeType() + ";base64," + frontImage.base64Data())));
+
+    // 측면 사진 (선택)
+    if (leftImageUrl != null && !leftImageUrl.isBlank()) {
+      EncodedImage leftImage = convertToBase64(leftImageUrl);
+      content.add(Map.of("type", "image_url", "image_url",
+          Map.of("url", "data:" + leftImage.mimeType() + ";base64," + leftImage.base64Data())));
+    }
+    if (rightImageUrl != null && !rightImageUrl.isBlank()) {
+      EncodedImage rightImage = convertToBase64(rightImageUrl);
+      content.add(Map.of("type", "image_url", "image_url",
+          Map.of("url", "data:" + rightImage.mimeType() + ";base64," + rightImage.base64Data())));
+    }
 
     Map<String, Object> requestBody = Map.of(
         "model", model,
         "response_format", Map.of("type", "json_object"),
         "messages", List.of(
-            Map.of("role", "user", "content", List.of(
-                Map.of("type", "text", "text", prompt),
-                Map.of("type", "image_url", "image_url", Map.of("url", dataUrl))
-            ))
+            Map.of("role", "user", "content", content)
         )
     );
 
     try {
       Map response = openAiRestTemplate.postForObject(
           endpoint + "/chat/completions", requestBody, Map.class);
-      String content = (String) ((Map) ((Map) ((List) ((Map) response).get("choices")).get(0))
+      String responseContent = (String) ((Map) ((Map) ((List) ((Map) response).get("choices")).get(0))
           .get("message")).get("content");
 
-      JsonNode root = objectMapper.readTree(content);
+      JsonNode root = objectMapper.readTree(responseContent);
       validateGptResponse(root);
       return objectMapper.treeToValue(root, OpenAiSkinAnalysisResult.class);
     } catch (Exception e) {
@@ -82,6 +97,18 @@ public class OpenAiAnalysisService {
       if (value < 0 || value > 100) {
         throw new IllegalArgumentException(field + " 값이 0~100 범위를 벗어났습니다: " + value);
       }
+      // overall_score가 5개 지표 평균과 일치하는지 검증 (반올림 허용 ±2)
+      int expectedOverall = (int) Math.round(
+          (root.get("trouble").intValue()
+              + root.get("sebum").intValue()
+              + root.get("dullness").intValue()
+              + root.get("moisture").intValue()
+              + root.get("elasticity").intValue()) / 5.0);
+      int actualOverall = root.get("overall_score").intValue();
+      if (Math.abs(actualOverall - expectedOverall) > 2) {
+        throw new IllegalArgumentException(
+            "overall_score(" + actualOverall + ")가 5개 지표 평균(" + expectedOverall + ")과 일치하지 않습니다.");
+      }
     }
 
     for (String field : COMMENT_FIELDS) {
@@ -92,7 +119,7 @@ public class OpenAiAnalysisService {
     }
   }
 
-  private EncodedImage convertToBase64(String imageUrl, String baseDir) {
+  private EncodedImage convertToBase64(String imageUrl) {
     if (imageUrl == null || !imageUrl.startsWith("https://luna-skin-images.s3.ap-northeast-2.amazonaws.com/")) {
       log.error("허용되지 않은 imageUrl 형식: {}", imageUrl);
       throw new CustomException(AnalysisErrorCode.GPT_ANALYSIS_FAILED);
@@ -125,33 +152,80 @@ public class OpenAiAnalysisService {
 
   private String buildPrompt(String phaseType) {
     return """
-            당신은 피부과 전문의입니다. 사용자의 얼굴 피부 사진을 분석해주세요.
-            현재 생리 주기 단계는 %s입니다.
+          당신은 피부과 전문의입니다. 사용자의 얼굴 피부 사진을 분석해주세요.
+          현재 생리 주기 단계는 %s입니다.
+          
+          반드시 아래 JSON 형식으로만 응답하세요. 다른 텍스트는 포함하지 마세요.
+          점수는 0~100 사이 정수입니다.
+          
+          각 항목 채점 기준:
+          - trouble(트러블): 트러블/여드름 개수 기준. 0개=100점, 1개=80점, 2~3개=60점, 4~6개=40점, 7~10개=20점, 11개 이상=0점
+          - sebum(유분): 피지량 기준. 0~15=100점, 16~30=80점, 31~45=60점, 46~65=40점, 66~80=20점, 81~100=0점 (낮을수록 좋음)
+          - dullness(칙칙함): 피부 톤 균일도 기준. 0~15=100점, 16~30=80점, 31~45=60점, 46~65=40점, 66~80=20점, 81~100=0점 (낮을수록 좋음)
+          - moisture(수분): 피부 수분량 기준. 78~100=100점, 68~77=80점, 58~67=60점, 43~57=40점, 28~42=20점, 0~27=0점 (높을수록 좋음)
+          - elasticity(탄력): 피부 탄력 기준. 85~100=100점, 75~84=80점, 65~74=60점, 50~64=40점, 35~49=20점, 0~34=0점 (높을수록 좋음)
+          - overall_score: 위 5개 항목의 평균값
+          
+          ai_comment, phase_comment 작성 규칙:
+          - 문체는 "~예요", "~해요" 체의 친근하지만 전문적인 존댓말로 작성.
+          - 뻔한 일반론 대신, 생리 주기 단계와 호르몬 변화를 근거로 한 구체적인 진단처럼 작성.
+          - ai_comment: 호르몬 변화와 피부 상태의 인과관계 설명 + 클렌저/토너/마스크 성분 등 구체적인 관리 루틴 추천 +
+            피해야 할 습관(과도한 세안, 자극적인 성분 등) 주의사항까지 2~3문장으로 작성.
+            예시: "현재 피부는 황체기의 프로게스테론 상승으로 피지선이 활성화된 상태예요. 주 1회 클레이 마스크와
+            BHA 토너 루틴이 효과적이에요. 과도한 세안은 오히려 피지 분비를 촉진하니 하루 2회를 넘기지 마세요."
+          - phase_comment: 현재 주기 단계가 얼굴의 구체적인 부위(T존, 턱, 볼 등)에 미치는 증상을 짧고
+            진단적인 한 문장으로 작성.
+            예시: "황체기 피지 분비 증가로 T존 유분·턱 민감도가 높아졌어요."
+          
+          {
+            "overall_score": 5개 항목 평균 점수,
+            "trouble": 트러블 점수 (낮을수록 트러블 심함),
+            "sebum": 유분 점수 (낮을수록 유분 많음),
+            "dullness": 칙칙함 점수 (낮을수록 칙칙함 심함),
+            "moisture": 수분 점수 (높을수록 수분 충분),
+            "elasticity": 탄력 점수 (높을수록 탄력 좋음),
+            "ai_comment": "위 규칙에 따른 종합 분석 코멘트",
+            "phase_comment": "위 규칙에 따른 주기 단계별 부위 진단 코멘트"
+          }
+          """.formatted(phaseType);
+  }
 
-            반드시 아래 JSON 형식으로만 응답하세요. 다른 텍스트는 포함하지 마세요.
-            점수는 0~100 사이 정수입니다.
 
-            ai_comment, phase_comment 작성 규칙:
-            - 문체는 "~예요", "~해요" 체의 친근하지만 전문적인 존댓말로 작성.
-            - 뻔한 일반론 대신, 생리 주기 단계와 호르몬 변화를 근거로 한 구체적인 진단처럼 작성.
-            - ai_comment: 호르몬 변화와 피부 상태의 인과관계 설명 + 클렌저/토너/마스크 성분 등 구체적인 관리 루틴 추천 +
-              피해야 할 습관(과도한 세안, 자극적인 성분 등) 주의사항까지 2~3문장으로 작성.
-              예시: "현재 피부는 황체기의 프로게스테론 상승으로 피지선이 활성화된 상태예요. 주 1회 클레이 마스크와
-              BHA 토너 루틴이 효과적이에요. 과도한 세안은 오히려 피지 분비를 촉진하니 하루 2회를 넘기지 마세요."
-            - phase_comment: 현재 주기 단계가 얼굴의 구체적인 부위(T존, 턱, 볼 등)에 미치는 증상을 짧고
-              진단적인 한 문장으로 작성.
-              예시: "황체기 피지 분비 증가로 T존 유분·턱 민감도가 높아졌어요."
+  public String generateCompareComment(
+      int overallScoreA, int troubleA, int sebumA, int dullnessA, int moistureA, int elasticityA,
+      int overallScoreB, int troubleB, int sebumB, int dullnessB, int moistureB, int elasticityB) {
 
-            {
-              "overall_score": 전체적인 피부 건강 종합 점수,
-              "trouble": 트러블/여드름 점수 (높을수록 트러블 심함),
-              "sebum": 유분 점수 (높을수록 유분 많음),
-              "dullness": 칙칙함 점수 (높을수록 칙칙하고 생기 없음),
-              "moisture": 수분 점수 (높을수록 수분 충분),
-              "elasticity": 탄력 점수 (높을수록 탄력 좋음),
-              "ai_comment": "위 규칙에 따른 종합 분석 코멘트",
-              "phase_comment": "위 규칙에 따른 주기 단계별 부위 진단 코멘트"
-            }
-            """.formatted(phaseType);
+    String prompt = String.format("""
+      다음은 두 날짜의 피부 분석 결과입니다.
+
+      [날짜 A]
+      종합 점수: %d, 트러블: %d, 유분: %d, 칙칙함: %d, 수분: %d, 탄력: %d
+
+      [날짜 B]
+      종합 점수: %d, 트러블: %d, 유분: %d, 칙칙함: %d, 수분: %d, 탄력: %d
+
+      두 날짜의 피부 변화를 바탕으로 현재 피부 상태와 케어 방법을 2~3문장으로 조언해주세요.
+      친근하고 실용적인 말투로 작성하고, 수치는 언급하지 마세요.
+      """,
+        overallScoreA, troubleA, sebumA, dullnessA, moistureA, elasticityA,
+        overallScoreB, troubleB, sebumB, dullnessB, moistureB, elasticityB);
+
+    Map<String, Object> requestBody = Map.of(
+        "model", model,
+        "messages", List.of(
+            Map.of("role", "user", "content", prompt)
+        ),
+        "max_tokens", 300
+    );
+
+    try {
+      Map response = openAiRestTemplate.postForObject(
+          endpoint + "/chat/completions", requestBody, Map.class);
+      return (String) ((Map) ((Map) ((List) ((Map) response).get("choices")).get(0))
+          .get("message")).get("content");
+    } catch (Exception e) {
+      log.error("비교 코멘트 생성 실패: {}", e.getMessage(), e);
+      return null;
+    }
   }
 }
